--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.4.0"
+    "moment": "^2.29.4",
+    "mongoose": "^7.4.0",
+    "nodemon": "^3.0.1",
+    "validator": "^13.9.0"
   }
 }
